syntax = "proto3";

option csharp_namespace = "GrpcServer.Service.Protos";

package weather;

service WeatherService {
	rpc GetCurrentWeather (GetCurrentWeatherForCityRequest) returns (WeatherResponse);
}

message GetCurrentWeatherForCityRequest{
	string city =1;
	enum Units {
		Standerd =0;
		Metric =1;
		Imperial =2;
	}
	Units units =2;
}

message WeatherResponse{
	double temperature =1;
	double feels_like=2;
}